@@ -1,4 +1,4 @@
-%define glibcrelease 73
+%define glibcrelease 74
 %define auxarches i586 i686 athlon sparcv9 alphaev6
 %define prelinkarches noarch
 %define nptlarches i386 i686 athlon x86_64 ia64 s390 s390x sparcv9 ppc ppc64
@@ -1256,6 +1256,14 @@ rm -f *.filelist*
 %endif
 
 %changelog
+* Wed Oct 27 2004 Jakub Jelinek <jakub@redhat.com> 2.3.3-74
+- fix <netinet/udp.h> header
+- fix globfree (#137176)
+- fix exiting if there are dlmopened libraries in namespaces
+  other than main one not closed yet
+- export again _res_opcodes and __p_{class,type}_syms from
+  libresolv.so that were lost in -69
+
 * Thu Oct 21 2004 Jakub Jelinek <jakub@redhat.com> 2.3.3-73
 - remove setaltroot and key{_add,_request,ctl} also from Versions
 - back out _sys_errlist changes
